--- a/index.html
+++ b/index.html
@@ -191,9 +191,8 @@
       <!-- Grille responsive de posts intégrés -->
       <div id="insta-grid" class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
 
-      <p class="mt-4 text-xs text-slate-500">
-        Astuce : pour ajouter un post, copie l’URL d’un post public (ex: <code>https://www.instagram.com/p/XXXXXXXX/</code>) dans la liste <code>INSTAGRAM_POSTS</code> ci-dessous.
-      </p>
+      <!-- // ❗ Astuce : pour ajouter un post, copie l’URL d’un post public (ex: <code>https://www.instagram.com/p/XXXXXXXX/</code>) dans la liste <code>INSTAGRAM_POSTS</code> ci-dessous.
+    -->
     </div>
   </section>
 
@@ -224,7 +223,7 @@
         <textarea class="border rounded-lg p-3 sm:col-span-2" rows="5" name="message" placeholder="Message"></textarea>
         <button class="btn btn-primary sm:col-span-2" type="submit">Envoyer</button>
       </form>
-      <p class="text-xs text-slate-500 mt-3">Remplace l’action du formulaire par ton endpoint (Formspree/EmailJS).</p>
+      <!-- // ❗ Remplace l’action du formulaire par ton endpoint (Formspree/EmailJS).-->
     </div>
   </section>
 
