le club, reactu
Signed-off-by: Sun S. D. Tan <sutan@redhat.com>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TC11 – Tennis Club</title>
-  <meta name="description" content="TC11 — Club de tennis : actualités, horaires, contact, et planning." />
+  <meta name="description" content="TC11 — Tennis pour tous et toutes, du loisir à la compétition, pour enfants (à partir de 5 ans) et adultes." />
 
   <!-- Palette TC11 (terre battue / balle) -->
   <style>
@@ -85,12 +85,12 @@
 </head>
 <body class="bg-white text-tc-ink">
   <!-- Header -->
-  <header class="sticky top-0 z-40 backdrop-blur bg-white/90 border-b">
+  <header class="sticky top-0 z-40 backdrop-blur bg-white/70 border-b">
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center gap-4">
       <img src="assets/tc11-logo.png" alt="Logo TC11" class="w-10 h-10 rounded-md ring-2 ring-tc-yellow" />
       <div class="flex-1">
         <h1 class="font-extrabold tracking-tight text-lg">TC11</h1>
-        <p class="text-xs text-slate-500">Tennis Club — passion, esprit d’équipe</p>
+        <p class="text-xs text-slate-500">Tennis pour tous et toutes, du loisir à la compétition, pour enfants (à partir de 5 ans) et adultes.</p>
       </div>
       <nav class="hidden md:flex gap-6 text-sm">
         <a href="#actus" class="hover:text-tc-orange">Actus</a>
@@ -161,21 +161,21 @@
         <div class="text-xs font-bold text-tc-orange mb-2">Compétitions</div>
         <h4 class="font-bold mb-2">Interclubs — résultats du week-end</h4>
         <p class="text-slate-600 mb-3">Belle victoire de l’équipe 1 (4-2). Bravo à toutes et tous !</p>
-        <a href="#contact" class="text-tc-orange hover:text-tc-orange-dark text-sm font-semibold">Voir le détail →</a>
+        <a href="/todo" class="text-tc-orange hover:text-tc-orange-dark text-sm font-semibold">Voir le détail →</a>
       </article>
 
       <article class="p-5 border rounded-xl hover:shadow-soft transition">
         <div class="text-xs font-bold text-tc-orange mb-2">Jeunes</div>
         <h4 class="font-bold mb-2">Stages Toussaint — pré-inscriptions</h4>
         <p class="text-slate-600 mb-3">Ouvert à partir de 8 ans, niveaux débutant à confirmé.</p>
-        <a href="#contact" class="text-tc-orange hover:text-tc-orange-dark text-sm font-semibold">Renseignements →</a>
+        <a href="/todo" class="text-tc-orange hover:text-tc-orange-dark text-sm font-semibold">Renseignements →</a>
       </article>
 
       <article class="p-5 border rounded-xl hover:shadow-soft transition">
         <div class="text-xs font-bold text-tc-orange mb-2">Club</div>
         <h4 class="font-bold mb-2">Nouvelle boutique TC11</h4>
         <p class="text-slate-600 mb-3">Textiles & accessoires aux couleurs du club.</p>
-        <a href="#contact" class="text-tc-orange hover:text-tc-orange-dark text-sm font-semibold">Découvrir →</a>
+        <a href="/todo" class="text-tc-orange hover:text-tc-orange-dark text-sm font-semibold">Découvrir →</a>
       </article>
     </div>
   </section>
@@ -197,19 +197,92 @@
   </section>
 
   <!-- Le Club + Carte -->
-  <section id="club" class="max-w-6xl mx-auto px-4 py-12 grid md:grid-cols-2 gap-10 items-start">
-    <div>
-      <h3 class="text-2xl font-extrabold mb-3">Le Club</h3>
-      <ul class="space-y-3">
-        <li class="flex items-start gap-3"><span class="iconify" data-icon="mdi:tennis-ball" aria-hidden="true"></span><span>4 courts extérieurs, 1 mur d’entraînement.</span></li>
-        <li class="flex items-start gap-3"><span class="iconify" data-icon="mdi:account-group" aria-hidden="true"></span><span>École de tennis (7-17 ans), cours adultes, équipes.</span></li>
-        <li class="flex items-start gap-3"><span class="iconify" data-icon="mdi:calendar-clock" aria-hidden="true"></span><span>Réservation en ligne • 7j/7 • 8h–22h.</span></li>
-      </ul>
-    </div>
-    <div class="rounded-xl overflow-hidden border shadow-soft">
-      <div id="map" class="h-72 w-full"></div>
-    </div>
-  </section>
+<!-- Le Club -->
+<section id="club" class="max-w-6xl mx-auto px-4 py-12">
+  <h3 class="text-2xl font-extrabold mb-3">Le Club</h3>
+
+  <p class="text-slate-700 mb-4">
+    <strong>TC11</strong> : Tennis pour toutes et tous, du loisir à la compétition,
+    pour enfants (à partir de 5 ans) et adultes.
+  </p>
+  <p class="text-slate-700 mb-4">
+    600 adhérents. 33% de joueurs classés. 8 sites pour jouer dans le 11e et à proximité.
+    7 profs diplômés. 9 bénévoles. 1 École de tennis. 1 Centre d'Entraînement Jeunes.
+    Cours collectifs adultes. 1 pôle arbitrage. 10 équipes engagées en compétitions.
+  </p>
+  <p class="text-slate-700 mb-4">
+    Club récompensé pour son action en faveur du tennis féminin. Club labellisé <em>Tennis Santé</em>.
+  </p>
+  <p class="text-slate-700 mb-6">
+    <strong>Reprise des cours collectifs le 15 septembre</strong>.
+  </p>
+
+  <h4 class="text-xl font-bold mb-4">Nos installations</h4>
+  <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+    <a href="https://www.paris.fr/lieux/tennis-alain-mimoun-ex-paul-valery-2965" target="_blank" rel="noopener"
+       class="block border rounded-xl overflow-hidden hover:shadow-soft transition">
+      <img src="https://cdn.paris.fr/eqpts-prod/2022/05/10/2478c719afb8333a332ccfe42ab11e09.jpg" alt="C.S. Alain Mimoun" class="w-full h-40 object-cover">
+      <div class="p-4">
+        <h5 class="font-bold text-tc-orange">C.S. Alain Mimoun</h5>
+        <p class="text-sm text-slate-600">Tennis — 4 terrains — Revêtement : béton poreux</p>
+      </div>
+    </a>
+    <a href="https://www.paris.fr/lieux/tennis-candie-19092" target="_blank" rel="noopener"
+       class="block border rounded-xl overflow-hidden hover:shadow-soft transition">
+      <img src="https://cdn.paris.fr/eqpts-prod/2022/05/10/1d9d1ce394041b7fe2738de8dc7a0a6e.jpg" alt="Candie" class="w-full h-40 object-cover">
+      <div class="p-4">
+        <h5 class="font-bold text-tc-orange">Candie</h5>
+        <p class="text-sm text-slate-600">Tennis — 3 terrains — Revêtement : gazon synthétique</p>
+      </div>
+    </a>
+    <a href="https://www.paris.fr/lieux/tennis-carnot-3318" target="_blank" rel="noopener"
+       class="block border rounded-xl overflow-hidden hover:shadow-soft transition">
+      <img src="https://cdn.paris.fr/eqpts-prod/2022/05/10/5e64e9fc7333c218fc9153f16d8865f2.jpg" alt="Carnot" class="w-full h-40 object-cover">
+      <div class="p-4">
+        <h5 class="font-bold text-tc-orange">Carnot</h5>
+        <p class="text-sm text-slate-600">Tennis — 1 terrain — Revêtement : synthétique</p>
+      </div>
+    </a>
+    <a href="https://www.paris.fr/lieux/tennis-la-faluere-2964" target="_blank" rel="noopener"
+       class="block border rounded-xl overflow-hidden hover:shadow-soft transition">
+      <img src="https://cdn.paris.fr/eqpts-prod/2022/05/10/1aeddd7bd7f2c30fd3bb1b67dcc5f7a2.jpg" alt="La Faluère" class="w-full h-40 object-cover">
+      <div class="p-4">
+        <h5 class="font-bold text-tc-orange">La Faluère</h5>
+        <p class="text-sm text-slate-600">Tennis — 1 terrain — Revêtement: Béton poreux</p>
+      </div>
+    </a>
+    <a href="https://www.google.com/maps/place/Centre+de+Comit%C3%A9+de+Tennis+de+Paris-Est+Les+Lilas/@48.8748281,2.4126617,1146m/data=!3m2!1e3!4b1!4m6!3m5!1s0x47e66d9ff724a35d:0x7eadf58726d49b97!8m2!3d48.8748281!4d2.4126617!16s%2Fg%2F11bx89wd5s?hl=fr&entry=ttu&g_ep=EgoyMDI1MDgwNi4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener"
+       class="block border rounded-xl overflow-hidden hover:shadow-soft transition">
+      <img src="https://cmsclub.fft.fr/57/75/0181/0855af8e-7c5d-46c6-845e-37d8f8e93878" alt="Les Lilas" class="w-full h-40 object-cover">
+      <div class="p-4">
+        <h5 class="font-bold text-tc-orange">Les Lilas</h5>
+        <p class="text-sm text-slate-600">Tennis — 1 terrain — Revêtement : terre battue</p>
+      </div>
+    </a>
+    <a href="https://www.paris.fr/lieux/tennis-philippe-auguste-17244" target="_blank" rel="noopener"
+       class="block border rounded-xl overflow-hidden hover:shadow-soft transition">
+      <img src="https://cdn.paris.fr/eqpts-prod/2022/05/10/c8cb2000799907c777d76468722abce5.jpg" alt="Philippe Auguste" class="w-full h-40 object-cover">
+      <div class="p-4">
+        <h5 class="font-bold text-tc-orange">Philippe Auguste</h5>
+        <p class="text-sm text-slate-600">Tennis — 1 terrain — Revêtement: Synthétique</p>
+      </div>
+    </a>
+    <a href="https://www.paris.fr/lieux/tennis-thiere-19075" target="_blank" rel="noopener"
+       class="block border rounded-xl overflow-hidden hover:shadow-soft transition">
+      <img src="https://cdn.paris.fr/eqpts-prod/2022/05/10/0a7e1914b8cde41d63405297f6bac76b.jpg" alt="Thiéré" class="w-full h-40 object-cover">
+      <div class="p-4">
+        <h5 class="font-bold text-tc-orange">Thiéré</h5>
+        <p class="text-sm text-slate-600">Tennis — 1 terrain — Revêtement : béton poreux</p>
+      </div>
+    </a>
+  </div>
+
+  <!-- Carte -->
+  <div class="mt-10 rounded-xl overflow-hidden border shadow-soft">
+    <div id="map" class="h-72 w-full"></div>
+  </div>
+</section>
+
 
   <!-- Contact / Réservations -->
   <section id="contact" class="bg-white py-12 border-t">
