center menu desktop
Signed-off-by: Sun S. D. Tan <sutan@redhat.com>

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <span class="iconify" data-icon="mdi:menu" style="font-size: 2rem;"></span>
       </button>
       <!-- Menu desktop -->
-      <nav class="hidden md:flex gap-6 text-sm">
+      <nav class="hidden md:flex items-center gap-6 text-sm">
         <a href="#actus" class="hover:text-tc-orange">Actus</a>
         <a href="#galerie" class="hover:text-tc-orange">Galerie</a>
         <a href="#club" class="hover:text-tc-orange">Le Club</a>
