align bottom hero banner
Signed-off-by: Sun S. D. Tan <sutan@redhat.com>

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         src="assets/hero-banner.jpg"
         alt="TC11 groupe"
         class="w-full h-full object-cover"
-        style="object-position:center 35%;"
+        style="object-position:center bottom;"
         loading="eager" fetchpriority="high"
       />
       <!-- Voile pour lisibilité -->
