reserver un court sur tenup
Signed-off-by: Sun S. D. Tan <sutan@redhat.com>

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <a href="#galerie" class="hover:text-tc-orange">Galerie</a>
         <a href="#club" class="hover:text-tc-orange">Le Club</a>
         <a href="#contact" class="hover:text-tc-orange">Contact</a>
-        <a href="#resa" class="btn btn-primary ml-2">Réserver un court</a>
+        <a href="https://tenup.fft.fr/club/57750181/reservations" class="btn btn-primary ml-2">Réserver un court</a>
       </nav>
       <!-- Menu mobile déroulant : DOIT ÊTRE DANS LE MÊME x-data -->
       <nav
@@ -127,7 +127,7 @@
         <a href="#galerie" class="hover:text-tc-orange" @click="open = false">Galerie</a>
         <a href="#club" class="hover:text-tc-orange" @click="open = false">Le Club</a>
         <a href="#contact" class="hover:text-tc-orange" @click="open = false">Contact</a>
-        <a href="#resa" class="btn btn-primary w-full mt-2" @click="open = false">Réserver un court</a>
+        <a href="https://tenup.fft.fr/club/57750181/reservations" class="btn btn-primary w-full mt-2" @click="open = false">Réserver un court</a>
       </nav>
     </div>
   </header>
@@ -140,7 +140,7 @@
         src="assets/hero-banner.jpg"
         alt="TC11 groupe"
         class="w-full h-full object-cover"
-        style="object-position:center bottom;"
+        style="object-position:center 35%;"
         loading="eager" fetchpriority="high"
       />
       <!-- Voile pour lisibilité -->
