--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="text-xs font-bold text-tc-orange mb-2">Compétitions</div>
         <h4 class="font-bold mb-2">Interclubs — résultats du week-end</h4>
         <p class="text-slate-600 mb-3">Belle victoire de l’équipe 1 (4-2). Bravo à toutes et tous !</p>
-        <a href="/todo" class="text-tc-orange hover:text-tc-orange-dark text-sm font-semibold">Voir le détail →</a>
+        <a href="/news/inter-clubs.html" class="text-tc-orange hover:text-tc-orange-dark text-sm font-semibold">Voir le détail →</a>
       </article>
 
       <article class="p-5 border rounded-xl hover:shadow-soft transition">
