--- a/index.html
+++ b/index.html
@@ -185,28 +185,132 @@
       <h3 class="text-2xl font-extrabold">Actualités</h3>
       <span class="text-sm text-slate-500">MàJ <span id="maj-date"></span></span>
     </div>
-    <div class="grid md:grid-cols-3 gap-6">
-      <!-- Exemple d’actu -->
-      <article class="p-5 border rounded-xl hover:shadow-soft transition">
-        <div class="text-xs font-bold text-tc-orange mb-2">Compétitions</div>
-        <h4 class="font-bold mb-2">Interclubs — résultats du week-end</h4>
-        <p class="text-slate-600 mb-3">Belle victoire de l’équipe 1 (4-2). Bravo à toutes et tous !</p>
-        <a href="/news/inter-clubs.html" class="text-tc-orange hover:text-tc-orange-dark text-sm font-semibold">Voir le détail →</a>
-      </article>
-
-      <article class="p-5 border rounded-xl hover:shadow-soft transition">
-        <div class="text-xs font-bold text-tc-orange mb-2">Jeunes</div>
-        <h4 class="font-bold mb-2">Stages Toussaint — pré-inscriptions</h4>
-        <p class="text-slate-600 mb-3">Ouvert à partir de 8 ans, niveaux débutant à confirmé.</p>
-        <a href="/todo" class="text-tc-orange hover:text-tc-orange-dark text-sm font-semibold">Renseignements →</a>
-      </article>
-
-      <article class="p-5 border rounded-xl hover:shadow-soft transition">
-        <div class="text-xs font-bold text-tc-orange mb-2">Club</div>
-        <h4 class="font-bold mb-2">Nouvelle boutique TC11</h4>
-        <p class="text-slate-600 mb-3">Textiles & accessoires aux couleurs du club.</p>
-        <a href="/todo" class="text-tc-orange hover:text-tc-orange-dark text-sm font-semibold">Découvrir →</a>
-      </article>
+    <div x-data="{
+      actus: [
+        {
+          categorie: 'Compétitions',
+          titre: 'Interclubs — résultats du week-end',
+          resume: 'Belle victoire de l’équipe 1 (4-2). Bravo à toutes et tous !',
+          date: '2025-08-09',
+          lien: '/news/inter-clubs.html',
+          lienTexte: 'Voir le détail →'
+        },
+        {
+          categorie: 'Jeunes',
+          titre: 'Stages Toussaint — pré-inscriptions',
+          resume: 'Ouvert à partir de 8 ans, niveaux débutant à confirmé.',
+          date: '2025-08-01',
+          lien: '/todo',
+          lienTexte: 'Renseignements →'
+        },
+        {
+          categorie: 'Club',
+          titre: 'Nouvelle boutique TC11',
+          resume: 'Textiles & accessoires aux couleurs du club.',
+          date: '2025-07-25',
+          lien: '/todo',
+          lienTexte: 'Découvrir →'
+        },
+        {
+          categorie: 'Compétitions',
+          titre: 'Tournoi interne : inscriptions ouvertes',
+          resume: 'Inscrivez-vous dès maintenant pour le tournoi interne 2025 !',
+          date: '2025-07-20',
+          lien: '/todo',
+          lienTexte: 'Je m’inscris →'
+        },
+        {
+          categorie: 'Club',
+          titre: 'Assemblée générale du club',
+          resume: 'Rendez-vous le 15 septembre à 19h au club-house.',
+          date: '2025-07-15',
+          lien: '/todo',
+          lienTexte: 'En savoir plus →'
+        },
+        {
+          categorie: 'Jeunes',
+          titre: 'Goûter de rentrée',
+          resume: 'Un moment convivial pour tous les jeunes licenciés, samedi 21 septembre.',
+          date: '2025-07-10',
+          lien: '/todo',
+          lienTexte: 'Voir l’événement →'
+        },
+        {
+          categorie: 'Compétitions',
+          titre: 'Résultats des équipes jeunes',
+          resume: 'Bravo à nos jeunes pour leurs belles performances ce week-end !',
+          date: '2025-07-05',
+          lien: '/todo',
+          lienTexte: 'Voir les résultats →'
+        },
+        {
+          categorie: 'Club',
+          titre: 'Nouveaux équipements',
+          resume: 'De nouveaux filets et bancs installés sur les courts.',
+          date: '2025-07-01',
+          lien: '/todo',
+          lienTexte: 'Découvrir →'
+        },
+        {
+          categorie: 'Jeunes',
+          titre: 'Stage d’hiver : pré-inscriptions',
+          resume: 'Stages pendant les vacances de février, tous niveaux.',
+          date: '2025-06-25',
+          lien: '/todo',
+          lienTexte: 'Infos & inscription →'
+        },
+        {
+          categorie: 'Compétitions',
+          titre: 'Championnat de Paris : calendrier',
+          resume: 'Retrouvez toutes les dates des rencontres à venir.',
+          date: '2025-06-20',
+          lien: '/todo',
+          lienTexte: 'Voir le calendrier →'
+        },
+        {
+          categorie: 'Club',
+          titre: 'Soirée doubles surprise',
+          resume: 'Venez participer à notre soirée doubles, vendredi 10 octobre.',
+          date: '2025-06-15',
+          lien: '/todo',
+          lienTexte: 'Je participe →'
+        },
+        {
+          categorie: 'Jeunes',
+          titre: 'Photos du stage d’été',
+          resume: 'Les photos du stage de juillet sont en ligne !',
+          date: '2025-06-10',
+          lien: '/todo',
+          lienTexte: 'Voir les photos →'
+        },
+        {
+          categorie: 'Compétitions',
+          titre: 'Tournoi Galaxie Orange',
+          resume: 'Tournoi pour les 8-10 ans, inscriptions jusqu’au 5 novembre.',
+          date: '2025-06-01',
+          lien: '/todo',
+          lienTexte: 'Inscrire mon enfant →'
+        }
+      ],
+      visible: 3,
+      increment: 3
+    }" class="">
+      <div class="grid md:grid-cols-3 gap-6">
+        <template x-for="(actu, idx) in actus.slice(0, visible)" :key="idx">
+          <article class="p-5 border rounded-xl hover:shadow-soft transition">
+            <div class="flex items-center justify-between mb-2">
+              <span class="text-xs font-bold text-tc-orange" x-text="actu.categorie"></span>
+              <span class="text-xs text-slate-400" x-text="new Date(actu.date).toLocaleDateString('fr-FR', { day: '2-digit', month: 'short', year: 'numeric' })"></span>
+            </div>
+            <h4 class="font-bold mb-2" x-text="actu.titre"></h4>
+            <p class="text-slate-600 mb-3" x-text="actu.resume"></p>
+            <a :href="actu.lien" class="text-tc-orange hover:text-tc-orange-dark text-sm font-semibold" x-text="actu.lienTexte"></a>
+          </article>
+        </template>
+      </div>
+      <div class="flex justify-center mt-8" x-show="visible < actus.length">
+        <button class="btn btn-primary" @click="visible += increment">Charger plus d’actu</button>
+      </div>
     </div>
   </section>
 
