--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <a href="#galerie" class="hover:text-tc-orange">Galerie</a>
         <a href="#club" class="hover:text-tc-orange">Le Club</a>
         <a href="#contact" class="hover:text-tc-orange">Contact</a>
-        <a href="https://tenup.fft.fr/club/57750181/reservations" class="btn btn-primary ml-2">Réserver un court</a>
+  <a href="#" class="btn btn-primary ml-2" onclick="openTenUp(event)">Réserver un court</a>
       </nav>
       <!-- Menu mobile déroulant : DOIT ÊTRE DANS LE MÊME x-data -->
       <nav
@@ -127,7 +127,22 @@
         <a href="#galerie" class="hover:text-tc-orange" @click="open = false">Galerie</a>
         <a href="#club" class="hover:text-tc-orange" @click="open = false">Le Club</a>
         <a href="#contact" class="hover:text-tc-orange" @click="open = false">Contact</a>
-        <a href="https://tenup.fft.fr/club/57750181/reservations" class="btn btn-primary w-full mt-2" @click="open = false">Réserver un court</a>
+  <a href="#" class="btn btn-primary w-full mt-2" @click="open = false" onclick="openTenUp(event)">Réserver un court</a>
+  <script>
+    function openTenUp(e) {
+      e.preventDefault();
+      var isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
+      var appUrl = 'tenup://club/57750181/reservations';
+      var webUrl = 'https://tenup.fft.fr/club/57750181/reservations';
+      if (isMobile) {
+        var timeout = setTimeout(function() { window.location.href = webUrl; }, 700);
+        window.location.href = appUrl;
+        // Si l'app s'ouvre, le timeout est annulé automatiquement par le navigateur
+      } else {
+        window.open(webUrl, '_blank');
+      }
+    }
+  </script>
       </nav>
     </div>
   </header>
