on test l'app mobile 2
Signed-off-by: Sun S. D. Tan <sutan@redhat.com>

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     function openTenUp(e) {
       e.preventDefault();
       var isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
-      var appUrl = 'tenup://club/57750181/reservations';
+      var appUrl = 'fr.fft.tenup://club/57750181/reservations';
       var webUrl = 'https://tenup.fft.fr/club/57750181/reservations';
       if (isMobile) {
         var timeout = setTimeout(function() { window.location.href = webUrl; }, 700);
