test du protocol handler mat
Signed-off-by: Sun S. D. Tan <sutan@redhat.com>

--- a/mat.html
+++ b/mat.html
@@ -28,6 +28,7 @@ button, a {
 <a href="mat://">mat://</a>
 <a href="mat://auth_callback">mat://auth_callback</a>
 <a href="mat://club/57750181">mat://club/57750181</a>
+<a href="mat://club/57750181/reservations">mat://club/57750181/reservations</a>
 <a href="mat://open/club/57750181">mat://open/club/57750181</a>
 <a href="mat://reservation/club/57750181">mat://reservation/club/57750181</a>
 <a href="mat://match">mat://match</a>
