--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TC11 – Tennis Club</title>
-  <meta name="description" content="Tennis pour tous et toutes, du loisir à la compétition, pour enfants et adultes." />
+  <meta name="description" content="TC11 — Tennis pour tous et toutes, du loisir à la compétition, pour enfants et adultes." />
 
   <style>[x-cloak]{display:none!important}</style>
   <!-- Palette TC11 (terre battue / balle) -->
@@ -98,7 +98,7 @@
       <img src="assets/tc11-logo.png" alt="Logo TC11" class="w-10 h-10 rounded-md ring-2 ring-tc-yellow" />
       <div class="flex-1">
         <h1 class="font-extrabold tracking-tight text-lg">TC11</h1>
-        <p class="text-xs text-slate-500">Tennis pour tous et toutes, du loisir à la compétition, pour enfants (à partir de 5 ans) et adultes.</p>
+        <p class="text-xs text-slate-500">Tennis pour tous et toutes, du loisir à la compétition, pour enfants et adultes.</p>
       </div>
       <!-- Bouton menu mobile -->
       <button
