--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <a href="#galerie" class="hover:text-tc-orange">Galerie</a>
         <a href="#club" class="hover:text-tc-orange">Le Club</a>
         <a href="#contact" class="hover:text-tc-orange">Contact</a>
-  <a href="#" class="btn btn-primary ml-2" onclick="openTenUp(event)">Réserver un court</a>
+  <a href="#" class="btn btn-primary ml-2" onclick="openTenUp(event)">Mon espace TenUp</a>
       </nav>
       <!-- Menu mobile déroulant : DOIT ÊTRE DANS LE MÊME x-data -->
       <nav
