--- a/content/index.html
+++ b/content/index.html
@@ -1,3 +1,15 @@
+---
+title: TC11 – Tennis Club
+description: TC11 — Tennis pour tous et toutes, du loisir à la compétition, pour enfants et adultes.
+layout: layouts/page.html
+---
+
+<section class="relative overflow-hidden">
+  <!-- Hero, actus, galerie, club, contact, etc. à insérer ici -->
+  <h2>Bienvenue au <span style="color:var(--tc-yellow)">TC11</span></h2>
+  <!-- ...reste du contenu d'accueil... -->
+</section>
+
 <!doctype html>
 <html lang="fr">
 <head>
