--- a/content/index.html
+++ b/content/index.html
@@ -4,219 +4,6 @@ description: TC11 — Tennis pour tous et toutes, du loisir à la compétition, 
 layout: layouts/page.html
 ---
 
-<section class="relative overflow-hidden">
-  <!-- Hero, actus, galerie, club, contact, etc. à insérer ici -->
-  <h2>Bienvenue au <span style="color:var(--tc-yellow)">TC11</span></h2>
-  <!-- ...reste du contenu d'accueil... -->
-</section>
-
-<!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TC11 – Tennis Club</title>
-  <meta name="description" content="TC11 — Tennis pour tous et toutes, du loisir à la compétition, pour enfants et adultes." />
-
-  <style>[x-cloak]{display:none!important}</style>
-  <!-- Palette TC11 (terre battue / balle) -->
-  <style>
-    :root{
-      --tc-orange:#e15a0b;        /* terre battue principale */
-      --tc-orange-dark:#b94808;   /* hover / contrastes */
-      --tc-yellow:#ffd400;        /* balle de tennis */
-      --tc-yellow-dark:#e6bf00;
-      --tc-white:#ffffff;
-      --tc-ink:#0f172a;           /* gris bleuté lisible */
-    }
-    /* fallback si Tailwind ne charge pas : */
-    body{font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji"; color:var(--tc-ink);}
-    .btn{display:inline-block;padding:.8rem 1.2rem;border-radius:.75rem;font-weight:700}
-    .btn-primary{background:var(--tc-orange);color:var(--tc-white)}
-    .btn-primary:hover{background:var(--tc-orange-dark)}
-    .chip{background:var(--tc-yellow); color:#111; font-weight:700; padding:.25rem .6rem; border-radius:999px;}
-
-    /* Ajouts pour les icônes & TenUp */
-    .icon-btn{
-      display:inline-flex; align-items:center; justify-content:center;
-      width:44px; height:44px; border-radius:9999px;
-      background:var(--tc-yellow); color:#111; font-size:22px;
-      box-shadow:0 6px 16px rgba(0,0,0,.18);
-      transition:transform .15s ease, background-color .2s ease;
-    }
-    .icon-btn:hover{ background:var(--tc-yellow-dark); transform:translateY(-1px); }
-
-    .btn-tenup{
-      display:inline-flex; align-items:center; gap:.5rem;
-      padding:.7rem 1rem; border-radius:.75rem; font-weight:700;
-      background:var(--tc-white); color:var(--tc-orange);
-      border:2px solid var(--tc-orange);
-    }
-    .btn-tenup:hover{ background:var(--tc-orange); color:#fff; }
-  </style>
-
-  <!-- Tailwind via CDN (pour la grille & le responsive) -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            tc: {
-              orange: 'var(--tc-orange)',
-              'orange-dark':'var(--tc-orange-dark)',
-              yellow: 'var(--tc-yellow)',
-              'yellow-dark':'var(--tc-yellow-dark)',
-              white: 'var(--tc-white)',
-              ink: 'var(--tc-ink)'
-            }
-          },
-          boxShadow: {
-            soft: '0 10px 25px rgba(0,0,0,.08)'
-          }
-        }
-      }
-    }
-  </script>
-
-  <!-- Libs légères pour l’interactivité -->
-  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/fr.js"></script>
-  <script>dayjs.locale('fr')</script>
-  <script src="https://code.iconify.design/3/3.1.1/iconify.min.js"></script>
-
-  <!-- Leaflet (carte) -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
-  <!-- Instagram embed (affiche les posts à partir de leurs URLs) -->
-  <script async src="https://www.instagram.com/embed.js"></script>
-
-  <link rel="icon" href="assets/tc11-logo.png" />
-  <meta name="theme-color" content="#e15a0b" />
-</head>
-<body class="bg-white text-tc-ink">
-  <!-- Header -->
-  <header class="sticky top-0 z-40 backdrop-blur bg-white/70 border-b">
-    <div 
-      class="max-w-6xl mx-auto px-4 py-3 flex items-center gap-4"
-      x-data="{ open: false }"
-      x-init="
-        const mq = window.matchMedia('(min-width: 768px)');
-        mq.addEventListener('change', e => { if(e.matches) open = false });
-      "
-    >
-      <img src="assets/tc11-logo.png" alt="Logo TC11" class="w-10 h-10 rounded-md ring-2 ring-tc-yellow" />
-      <div class="flex-1">
-        <h1 class="font-extrabold tracking-tight text-lg">TC11</h1>
-        <p class="text-xs text-slate-500">Tennis pour tous et toutes, du loisir à la compétition, pour enfants et adultes.</p>
-      </div>
-      <!-- Bouton menu mobile -->
-      <button
-        @click="open = !open"
-        class="md:hidden ml-auto p-2 rounded-lg hover:bg-slate-100 focus:outline-none"
-        aria-label="Ouvrir le menu"
-      >
-        <span class="iconify" data-icon="mdi:menu" style="font-size: 2rem;"></span>
-      </button>
-      <!-- Menu desktop -->
-      <nav class="hidden md:flex items-center gap-6 text-sm">
-        <a href="#actus" class="hover:text-tc-orange">Actus</a>
-        <a href="#galerie" class="hover:text-tc-orange">Galerie</a>
-        <a href="#club" class="hover:text-tc-orange">Le Club</a>
-        <a href="#contact" class="hover:text-tc-orange">Contact</a>
-  <a href="#" class="btn btn-primary ml-2" onclick="openTenUp(event)">Mon espace TenUp</a>
-      </nav>
-      <!-- Menu mobile déroulant : DOIT ÊTRE DANS LE MÊME x-data -->
-      <nav
-        x-show="open"
-        x-cloak
-        @click.away="open = false"
-        class="md:hidden bg-white border-t shadow-soft px-4 py-4 flex flex-col gap-4 text-base absolute top-full left-0 w-full z-50"
-      >
-        <a href="#actus" class="hover:text-tc-orange" @click="open = false">Actus</a>
-        <a href="#galerie" class="hover:text-tc-orange" @click="open = false">Galerie</a>
-        <a href="#club" class="hover:text-tc-orange" @click="open = false">Le Club</a>
-        <a href="#contact" class="hover:text-tc-orange" @click="open = false">Contact</a>
-  <a href="#" class="btn btn-primary w-full mt-2" @click="open = false" onclick="openTenUp(event)">Mon espace TenUp</a>
-  <script>
-    function openTenUp(e) {
-      e.preventDefault();
-      var isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
-      var appUrl = 'mat://home';
-      var webUrl = 'https://tenup.fft.fr/accueil';
-      if (isMobile) {
-        var timeout = setTimeout(function() { window.location.href = webUrl; }, 700);
-        window.location.href = appUrl;
-      } else {
-        window.open(webUrl, '_blank');
-      }
-    }
-    function openTenUpClub(e) {
-      e.preventDefault();
-      var isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
-      var appUrl = 'mat://club/57750181';
-      var webUrl = 'https://tenup.fft.fr/club/57750181';
-      if (isMobile) {
-        var timeout = setTimeout(function() { window.location.href = webUrl; }, 700);
-        window.location.href = appUrl;
-      } else {
-        window.open(webUrl, '_blank');
-      }
-    }
-  </script>
-      </nav>
-    </div>
-  </header>
-
-  <!-- Hero -->
-  <section class="relative overflow-hidden">
-    <!-- Image de fond -->
-    <div class="absolute inset-0">
-      <img
-        src="assets/hero-banner.jpg"
-        alt="TC11 groupe"
-        class="w-full h-full object-cover"
-        style="object-position:center 35%;"
-        loading="eager" fetchpriority="high"
-      />
-      <!-- Voile pour lisibilité -->
-      <div class="absolute inset-0 bg-gradient-to-b from-black/40 via-black/35 to-black/55"></div>
-    </div>
-
-    <div class="relative max-w-6xl mx-auto px-4 py-16 md:py-24">
-      <span class="inline-flex items-center px-3 py-1 rounded-full text-xs font-bold"
-            style="background:var(--tc-yellow); color:#111;">TC11</span>
-      <h2 class="mt-3 text-4xl md:text-5xl font-extrabold leading-tight text-white">
-        Bienvenue au <span style="color:var(--tc-yellow)">TC11</span>
-      </h2>
-      <p class="mt-3 text-white/90 text-lg max-w-xl">
-        Entraînements, équipes, tournois.
-      </p>
-      <div class="mt-6 flex flex-wrap items-center gap-3">
-        <a href="#actus" class="btn btn-primary">Voir les actus</a>
-
-        <!-- Icônes rondes -->
-        <a class="icon-btn" aria-label="Instagram TC11"
-           href="https://www.instagram.com/tc11assb/" target="_blank" rel="noopener">
-          <span class="iconify" data-icon="mdi:instagram"></span>
-        </a>
-
-        <a class="icon-btn" aria-label="Facebook TC11"
-           href="http://www.facebook.com/tennisclub11" target="_blank" rel="noopener">
-          <span class="iconify" data-icon="mdi:facebook"></span>
-        </a>
-
-        <!-- Lien TenUp -->
-        <a class="btn-tenup" href="#" onclick="openTenUpClub(event)">
-          <span class="iconify" data-icon="mdi:tennis-ball"></span>
-          TenUp
-        </a>
-      </div>
-    </div>
-  </section>
-
   <!-- Rubrique Actus -->
   <section id="actus" class="max-w-6xl mx-auto px-4 py-12">
     <div class="flex items-baseline justify-between mb-6">
@@ -477,11 +264,6 @@ layout: layouts/page.html
     </div>
   </section>
 
-  <footer class="text-center text-xs text-slate-500 py-8">
-    <img src="assets/tc11-logo.png" alt="Logo TC11" class="mx-auto w-10 h-10 mb-2"/>
-    © <span id="year"></span> TC11 — Tous droits réservés
-  </footer>
-
   <!-- Données Instagram : liste d’URLs de posts publics -->
   <script>
     // ❗ Remplace ces exemples par des posts publics de https://www.instagram.com/tc11assb/
@@ -493,37 +275,5 @@ layout: layouts/page.html
   </script>
 
   <!-- Script d’initialisation -->
-  <script>
-    // Dates
-    document.getElementById('year').textContent = new Date().getFullYear();
-    document.getElementById('maj-date').textContent = dayjs().format('DD MMM YYYY');
+  <script src="/instagramposts.js"></script>
 
-    // Leaflet (modifie les coords par l’adresse du club)
-    const map = L.map('map').setView([48.8566, 2.3522], 12);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution: '&copy; OpenStreetMap' }).addTo(map);
-    L.marker([48.8566, 2.3522]).addTo(map).bindPopup('TC11 — Nos courts').openPopup();
-
-    // Grille Instagram via oEmbed
-    const grid = document.getElementById('insta-grid');
-    function addEmbed(url){
-      const wrapper = document.createElement('div');
-      wrapper.innerHTML = `
-        <blockquote class="instagram-media" data-instgrm-permalink="${url}" data-instgrm-version="14" style="background:#fff; border:0; margin:0; padding:0; width:100%;">
-        </blockquote>
-      `;
-      grid.appendChild(wrapper);
-    }
-    INSTAGRAM_POSTS.forEach(addEmbed);
-
-    // Si des posts ont été ajoutés, déclenche le rendu embed
-    function processEmbedsWhenReady(){
-      if (window.instgrm && window.instgrm.Embeds && typeof window.instgrm.Embeds.process === 'function'){
-        window.instgrm.Embeds.process();
-      } else {
-        setTimeout(processEmbedsWhenReady, 300);
-      }
-    }
-    if (INSTAGRAM_POSTS.length) processEmbedsWhenReady();
-  </script>
-</body>
-</html>
