--- a/content/index.html
+++ b/content/index.html
@@ -10,116 +10,7 @@ layout: layouts/page.html
       <h3 class="text-2xl font-extrabold">Actualités</h3>
       <span class="text-sm text-slate-500">MàJ <span id="maj-date"></span></span>
     </div>
-    <div x-data="{
-      actus: [
-        {
-          categorie: 'Compétitions',
-          titre: 'Interclubs — résultats du week-end',
-          resume: 'Belle victoire de l’équipe 1 (4-2). Bravo à toutes et tous !',
-          date: '2025-08-09',
-          lien: '/news/inter-clubs.html',
-          lienTexte: 'Voir le détail →'
-        },
-        {
-          categorie: 'Jeunes',
-          titre: 'Stages Toussaint — pré-inscriptions',
-          resume: 'Ouvert à partir de 8 ans, niveaux débutant à confirmé.',
-          date: '2025-08-01',
-          lien: '/todo',
-          lienTexte: 'Renseignements →'
-        },
-        {
-          categorie: 'Club',
-          titre: 'Nouvelle boutique TC11',
-          resume: 'Textiles & accessoires aux couleurs du club.',
-          date: '2025-07-25',
-          lien: '/todo',
-          lienTexte: 'Découvrir →'
-        },
-        {
-          categorie: 'Compétitions',
-          titre: 'Tournoi interne : inscriptions ouvertes',
-          resume: 'Inscrivez-vous dès maintenant pour le tournoi interne 2025 !',
-          date: '2025-07-20',
-          lien: '/todo',
-          lienTexte: 'Je m’inscris →'
-        },
-        {
-          categorie: 'Club',
-          titre: 'Assemblée générale du club',
-          resume: 'Rendez-vous le 15 septembre à 19h au club-house.',
-          date: '2025-07-15',
-          lien: '/todo',
-          lienTexte: 'En savoir plus →'
-        },
-        {
-          categorie: 'Jeunes',
-          titre: 'Goûter de rentrée',
-          resume: 'Un moment convivial pour tous les jeunes licenciés, samedi 21 septembre.',
-          date: '2025-07-10',
-          lien: '/todo',
-          lienTexte: 'Voir l’événement →'
-        },
-        {
-          categorie: 'Compétitions',
-          titre: 'Résultats des équipes jeunes',
-          resume: 'Bravo à nos jeunes pour leurs belles performances ce week-end !',
-          date: '2025-07-05',
-          lien: '/todo',
-          lienTexte: 'Voir les résultats →'
-        },
-        {
-          categorie: 'Club',
-          titre: 'Nouveaux équipements',
-          resume: 'De nouveaux filets et bancs installés sur les courts.',
-          date: '2025-07-01',
-          lien: '/todo',
-          lienTexte: 'Découvrir →'
-        },
-        {
-          categorie: 'Jeunes',
-          titre: 'Stage d’hiver : pré-inscriptions',
-          resume: 'Stages pendant les vacances de février, tous niveaux.',
-          date: '2025-06-25',
-          lien: '/todo',
-          lienTexte: 'Infos & inscription →'
-        },
-        {
-          categorie: 'Compétitions',
-          titre: 'Championnat de Paris : calendrier',
-          resume: 'Retrouvez toutes les dates des rencontres à venir.',
-          date: '2025-06-20',
-          lien: '/todo',
-          lienTexte: 'Voir le calendrier →'
-        },
-        {
-          categorie: 'Club',
-          titre: 'Soirée doubles surprise',
-          resume: 'Venez participer à notre soirée doubles, vendredi 10 octobre.',
-          date: '2025-06-15',
-          lien: '/todo',
-          lienTexte: 'Je participe →'
-        },
-        {
-          categorie: 'Jeunes',
-          titre: 'Photos du stage d’été',
-          resume: 'Les photos du stage de juillet sont en ligne !',
-          date: '2025-06-10',
-          lien: '/todo',
-          lienTexte: 'Voir les photos →'
-        },
-        {
-          categorie: 'Compétitions',
-          titre: 'Tournoi Galaxie Orange',
-          resume: 'Tournoi pour les 8-10 ans, inscriptions jusqu’au 5 novembre.',
-          date: '2025-06-01',
-          lien: '/todo',
-          lienTexte: 'Inscrire mon enfant →'
-        }
-      ],
-      visible: 3,
-      increment: 3
-    }" class="">
+    <div x-data="actusData()" x-init="fetchActus()" class="">
       <div class="grid md:grid-cols-3 gap-6">
         <template x-for="(actu, idx) in actus.slice(0, visible)" :key="idx">
           <article class="p-5 border rounded-xl hover:shadow-soft transition">
@@ -276,4 +167,20 @@ layout: layouts/page.html
 
   <!-- Script d’initialisation -->
   <script src="/instagramposts.js"></script>
+
+  <script>
+function actusData() {
+  return {
+    actus: [],
+    visible: 3,
+    increment: 3,
+    async fetchActus() {
+      const res = await fetch('/actus.json');
+      if (res.ok) {
+        this.actus = await res.json();
+      }
+    }
+  }
+}
+</script>
 
